--- a/sourse/pug/blocks/sWorkConditions/_sWorkConditions.scss
+++ b/sourse/pug/blocks/sWorkConditions/_sWorkConditions.scss
@@ -71,7 +71,7 @@
 			--bs-gutter-x: #{rem(64)};
 			--bs-gutter-y: #{rem(40)};
 		}
-		
+		--bs-gutter-y: #{rem(26)};
 	}
 	&__item {
 		display: flex;
