--- a/sourse/pug/blocks/sCenterCount/sCenterCount-js.pug
+++ b/sourse/pug/blocks/sCenterCount/sCenterCount-js.pug
@@ -63,7 +63,7 @@ script.
 									//- if (bar) {
 									//- 	bar.style.setProperty('--el-index', index);
 									//- }
-									console.log(`sCenterCount__item:nth-child(${index + 2}) sCenterCount__item-inner`);
+									//- console.log(`sCenterCount__item:nth-child(${index + 2}) sCenterCount__item-inner`);
 									$(`.sCenterCount__item-inner`).removeClass("hover")
 									$(`.sCenterCount__item:nth-child(${index + 2}) .sCenterCount__item-inner`).addClass("hover")
 									myChart.data.datasets[ 0 ].backgroundColor = charColorsGray; 
