--- a/sourse/pug/pages/03-status.pug
+++ b/sourse/pug/pages/03-status.pug
@@ -31,7 +31,7 @@ block pagecontent
 	+headerBlockBody('Status',`Статусы и награды`,`Входим в&nbsp;TOP-10 крупнейших поставщиков BI-решений в&nbsp;России 2020, в&nbsp;TOP-5 аутсорсеров поддержки решений SAP в&nbsp;России по&nbsp;версии аналитического центра TAdviser`,).bg-dark.section--vh
 	+sStatus2.bg-white.section--vh
 	+sExpert.bg-dark.section--vh
-	+sCaptionBlockStatus.bg-white
+	+sCaptionBlockStatus.bg-white.section--vh
 	//- +sNews.bg-white.section--vh
 	//- +sEvents.bg-dark.section--vh
 	//- +sWays.bg-white.section--vh
