--- a/sourse/pug/blocks/sContent/_sContent.pug
+++ b/sourse/pug/blocks/sContent/_sContent.pug
@@ -63,7 +63,7 @@ mixin sContent()
 					span Директор
 		.container.container--small.mb-32(data-aos="fade-up" data-aos-delay="300")
 			h3.mb-32 H3 Header two line words description
-			p.mb-0 Quisque ut consectetur risus, in rhoncus urna. Aenean pellentesque, velit id suscipit pharetra, tortor est egestas dolor, non congue sem nunc quis leo. Donec non purus venenatis, congue lectus nec, volutpat dui. Donec non orci et justo pulvinar tincidunt et vel enim. Cras at nulla massa. Nulla metus enim, consequat eu ante vel, posuere tempor massa. Vestibulum viverra luctus posuere.
+			p.mb-0.fw-light Quisque ut consectetur risus, in rhoncus urna. Aenean pellentesque, velit id suscipit pharetra, tortor est egestas dolor, non congue sem nunc quis leo. Donec non purus venenatis, congue lectus nec, volutpat dui. Donec non orci et justo pulvinar tincidunt et vel enim. Cras at nulla massa. Nulla metus enim, consequat eu ante vel, posuere tempor massa. Vestibulum viverra luctus posuere.
 		.container.container--small.mb-56(data-aos="fade-up" data-aos-delay="300")
 			+e.OL.num-list
 				li Nam luctus orci non suscipit mollis
@@ -87,9 +87,9 @@ mixin sContent()
 				+e.arrow-wrap
 					+arrow
 		.container.container--small.mb-56(data-aos="fade-up" data-aos-delay="300")
-			h4.mb-32 H4 Header two line words description
-			h5 H5 Header two line words description
-			p.mb-0 Quisque ut consectetur risus, in rhoncus urna. Aenean pellentesque, velit id suscipit pharetra, tortor est egestas dolor, non congue sem nunc quis leo. Donec non purus venenatis, congue lectus nec, volutpat dui. Donec non orci et justo pulvinar tincidunt et vel enim. Cras at nulla massa. Nulla metus enim, consequat eu ante vel, posuere tempor massa. Vestibulum viverra luctus posuere.
+			h4.mb-32.fw-light H4 Header two line words description
+			h5.fw-light H5 Header two line words description
+			p.mb-0.fw-light Quisque ut consectetur risus, in rhoncus urna. Aenean pellentesque, velit id suscipit pharetra, tortor est egestas dolor, non congue sem nunc quis leo. Donec non purus venenatis, congue lectus nec, volutpat dui. Donec non orci et justo pulvinar tincidunt et vel enim. Cras at nulla massa. Nulla metus enim, consequat eu ante vel, posuere tempor massa. Vestibulum viverra luctus posuere.
 		.container.container--small.pb-56(data-aos="fade-up" data-aos-delay="300")
 			+share()
 	// end sContent
@@ -145,7 +145,7 @@ mixin sContent2()
 					span Директор
 		.container.container--small.mb-32(data-aos="fade-up" data-aos-delay="300")
 			h3.mb-32 H3 Header two line words description
-			p.mb-0 Quisque ut consectetur risus, in rhoncus urna. Aenean pellentesque, velit id suscipit pharetra, tortor est egestas dolor, non congue sem nunc quis leo. Donec non purus venenatis, congue lectus nec, volutpat dui. Donec non orci et justo pulvinar tincidunt et vel enim. Cras at nulla massa. Nulla metus enim, consequat eu ante vel, posuere tempor massa. Vestibulum viverra luctus posuere.
+			p.mb-0.fw-light Quisque ut consectetur risus, in rhoncus urna. Aenean pellentesque, velit id suscipit pharetra, tortor est egestas dolor, non congue sem nunc quis leo. Donec non purus venenatis, congue lectus nec, volutpat dui. Donec non orci et justo pulvinar tincidunt et vel enim. Cras at nulla massa. Nulla metus enim, consequat eu ante vel, posuere tempor massa. Vestibulum viverra luctus posuere.
 		.container.container--small.mb-56(data-aos="fade-up" data-aos-delay="300")
 			+e.OL.num-list
 				li Nam luctus orci non suscipit mollis
@@ -169,9 +169,9 @@ mixin sContent2()
 				+e.arrow-wrap
 					+arrow
 		.container.container--small.mb-56(data-aos="fade-up" data-aos-delay="300")
-			h4.mb-32 H4 Header two line words description
-			h5 H5 Header two line words description
-			p.mb-0 Quisque ut consectetur risus, in rhoncus urna. Aenean pellentesque, velit id suscipit pharetra, tortor est egestas dolor, non congue sem nunc quis leo. Donec non purus venenatis, congue lectus nec, volutpat dui. Donec non orci et justo pulvinar tincidunt et vel enim. Cras at nulla massa. Nulla metus enim, consequat eu ante vel, posuere tempor massa. Vestibulum viverra luctus posuere.
+			h4.mb-32.fw-light H4 Header two line words description
+			h5.fw-light H5 Header two line words description
+			p.mb-0.fw-light Quisque ut consectetur risus, in rhoncus urna. Aenean pellentesque, velit id suscipit pharetra, tortor est egestas dolor, non congue sem nunc quis leo. Donec non purus venenatis, congue lectus nec, volutpat dui. Donec non orci et justo pulvinar tincidunt et vel enim. Cras at nulla massa. Nulla metus enim, consequat eu ante vel, posuere tempor massa. Vestibulum viverra luctus posuere.
 		.container.container--small.pb-56(data-aos="fade-up" data-aos-delay="300")
 			+share()
 
