--- a/sourse/pug/pages/13-article-2.pug
+++ b/sourse/pug/pages/13-article-2.pug
@@ -41,8 +41,8 @@ block pagecontent
 		+headerArtical-content('first')
 	+sContent2().bg-white.section--vh
 	+sService2().bg-white
-		+sService2Item('12 сентября 2022','Quisque ut consectetur risus, in rhoncus urna. Aenean pellentesque, velit id suscipit pharetra, tortor est egestas dolor, non congue sem nunc quis leo.', '')
-		+sService2Item('6 сентября 2022','Nam non aliquam magna. Etiam et consectetur purus posuere tempor massa. Vestibulum viverra luctus posuere.', 'true')
+		+sService2Item('12 сентября 2022','Quisque ut consectetur risus, in rhoncus urna. Aenean pellentesque, velit id suscipit pharetra, tortor est egestas dolor, non congue sem nunc quis leo.', '', '', '', '', 'online')
+		+sService2Item('6 сентября 2022','Nam non aliquam magna. Etiam et consectetur purus posuere tempor massa. Vestibulum viverra luctus posuere.', 'true', '', '', '', 'online')
 	+footer().bg-dark
       
 
