--- a/sourse/sass/_sprite.scss
+++ b/sourse/sass/_sprite.scss
@@ -87,7 +87,7 @@
 	font-size:math.div(24,10)*1rem;
 	width: math.div(24,24)*1em;
 }
-.icon-whatsApp {
+.icon-whatsapp {
 	font-size:math.div(24,10)*1rem;
 	width: math.div(24,24)*1em;
 }
