--- a/sourse/pug/blocks/sDirections/_sDirections.pug
+++ b/sourse/pug/blocks/sDirections/_sDirections.pug
@@ -4,4 +4,14 @@ mixin sDirections(data)
 		.container
 			+b.section-title
 				h2 Направления
+			mixin item(title, text)
+				+e.row.row
+					.col-md
+						h4!= title
+					.col-md
+						p!= text
+			+item('Финансы', 'Совокупность экономических отношений, возникающих в&nbsp;процессе формирования, распределения и&nbsp;использования централизованных.')
+			+item('Сеть и управление расходами', 'Основные&nbsp;&mdash; непосредственно связаны с&nbsp;производством и&nbsp;оказанием услуг: они могут быть прямыми и&nbsp;косвенными.')
+			+item('Управление цепочками поставок', 'Это управление потоком товаров, данных и&nbsp;финансов, связанных с&nbsp;продуктом или услугой, от&nbsp;закупки сырья до&nbsp;доставки продукта в&nbsp;конечный пункт назначения.')
+			+item('Взаимоотношения с клиентами и клиентский опыт', 'Это результат взаимодействия между бизнесом/организацией и&nbsp;клиентом. Составляющие взаимодействия: Путь клиента от&nbsp;возникновения потребности до&nbsp;действий после получения результата')
 	// end sDirections
