--- a/sourse/pug/layout/js-css.pug
+++ b/sourse/pug/layout/js-css.pug
@@ -5,6 +5,8 @@ mixin allcss()
 	<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;300;400;500;600&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital@1&display=swap" rel="stylesheet">
 	
+	link(rel="stylesheet", href="libs/filepond/filepond.min.css")
+
 	link(href="libs/choices.js/public/assets/styles/choices.min.css", rel="stylesheet")
 	//- link(href="libs/choices.js/public/assets/styles/base.min.css", rel="stylesheet")
 	link(href="libs/swiper/swiper-bundle.min.css", rel="stylesheet")
@@ -21,6 +23,8 @@ mixin allcjs()
 	script(src="libs/swiper/swiper-bundle.min.js")  
 	script(src="libs/inputmask/inputmask.min.js") 
 	script(src="libs/choices.js/public/assets/scripts/choices.min.js") 
+
+	script(src="libs/filepond/filepond.min.js")
 
 	script(src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&apikey=2066e304-cee0-4ed2-9cb2-5f6521d5f96c")
 
