--- a/sourse/pug/blocks/sNews/_sNews.scss
+++ b/sourse/pug/blocks/sNews/_sNews.scss
@@ -4,7 +4,7 @@
 	// --sPB: #{rem()};
 	// --sTPB: #{rem()};
 	position: relative;
-	z-index: 2;
+	z-index: 4;
 	&__row {
 		// --bs-gutter-x: #{rem()};
 		// --bs-gutter-y: #{rem()};
@@ -28,6 +28,51 @@
 		margin-bottom: var(--y, 40px);
 		@include media-breakpoint-down(md) {
 			width: 90%;
+		}
+		&--sNews {
+			&::before {
+				content: '';
+				background-image: url('../img/svg/quote.svg');
+				background-repeat: no-repeat;
+				background-position: center;
+				width: 24px;
+				height: 24px;
+				display: block;
+				margin-bottom: rem(8);
+			}
+			h4 {
+				font-family: 'Playfair Display',serif;
+				margin-bottom: rem(22);
+			}
+		}
+	}
+	&__author {
+		display: flex;
+		align-items: center;
+		img {
+			// position: absolute;
+			// top: 0;
+			// left: 0;
+			width: 100%;
+			height: 100%;
+			max-width: 48px;
+			max-height: 48px;
+			border-radius: 83px;
+			flex: 0 0 auto;
+			margin-right: rem(16);
+		}
+	}
+	&__text-wrap {
+		h6 {
+			font-weight: 500;
+			text-transform: uppercase;
+			font-size: rem(12);
+			margin-bottom: rem(4);
+		}
+		p {
+			font-size: rem(13);
+			font-weight: 300;
+			margin-bottom: 0;
 		}
 	}
 
