--- a/sourse/pug/pages/08-internship.pug
+++ b/sourse/pug/pages/08-internship.pug
@@ -9,6 +9,7 @@ include ../blocks/sService/_sService.pug
  
 include ../blocks/sNews/_sNews.pug
 include ../blocks/sDirections/_sDirections.pug
+include ../blocks/sOpportunities/_sOpportunities.pug
 
 //- include ../blocks/sContact/_sContact.pug 
 include ../blocks/sValueProposition/_sValueProposition.pug
@@ -36,6 +37,9 @@ block pagecontent
 	+top-nav()
 	+headerBlockBody('Internship', 'Стажировка в SAPRUN', 'Стажерские программы&nbsp;&mdash; это отличная возможность для выпускников ВУЗов начать карьеру в&nbsp;САПРАН. Наших стажеров обучают лучшие эксперты компании. После обучения у&nbsp;них есть возможность сразу влиться в&nbsp;реальные проекты для ведущих российских компаний.', 'right').bg-dark.section--vh
 	+sDirections().bg-white.section--vh
+	+sOpportunities2().bg-dark.section--vh
+	+sNewsReviews().bg-white.section--vh
+	+sForm2().bg-dark.section--vh
 	+sNewsPressCenter.bg-white.section--vh
 	+footer().bg-dark
       
