--- a/sourse/pug/blocks/sForm/_sForm.pug
+++ b/sourse/pug/blocks/sForm/_sForm.pug
@@ -28,7 +28,7 @@ mixin sForm2()
 		.container
 			+form-wrap
 				+b.section-title
-					h2 Давайте обсудим, как мы&nbsp;могли  бы&nbsp;работать вместе
+					h2 Заполните заявку для записи на стажировку
 				+e.row.row
 					.col-md-6
 						+input("Имя")
