--- a/sourse/pug/blocks/sOpportunities/_sOpportunities.pug
+++ b/sourse/pug/blocks/sOpportunities/_sOpportunities.pug
@@ -21,7 +21,7 @@ mixin sOpportunities(data)
 mixin sOpportunities2(data)
 	// start sOpportunities
 	+b.sOpportunities.section#sOpportunities&attributes(attributes)
-		.container
+		.container(data-aos="fade-up" data-aos-delay="300")
 			.row
 				.col-md-4
 					h2 Что вы получите от стажировки
