--- a/sourse/pug/blocks/sForm/_sForm.pug
+++ b/sourse/pug/blocks/sForm/_sForm.pug
@@ -25,7 +25,7 @@ mixin sForm2()
 	// start sForm
 	+b.SECTION.sForm--2.section#sForm&attributes(attributes)
 		+blur()
-		.container
+		.container(data-aos="fade-up" data-aos-delay="300")
 			+form-wrap
 				+b.section-title
 					h2 Заполните заявку для записи на стажировку
