--- a/sourse/pug/blocks/footer/_footer.pug
+++ b/sourse/pug/blocks/footer/_footer.pug
@@ -33,11 +33,11 @@ mixin footer()
 						+e.email(href="mailto:info@saprun.com") info@saprun.com 
 					+soc()
 		.container
-			+e.block--footer.ttu
+			+e.block--footer
 				.row
 					.col-md-6
 						+e.copy Политика обработки персональных данных
-					.col-md
+					.col-md.ttu
 						+e.year © 2022 SAPRUN
 					.col-md-auto
 						+e.develop(href="#")
