--- a/sourse/pug/blocks/sContent/_sContent.pug
+++ b/sourse/pug/blocks/sContent/_sContent.pug
@@ -215,6 +215,10 @@ mixin sContent4()
 					+item('220+', 'Источников информации из&nbsp;систем и&nbsp;подразделений банка объединено в&nbsp;КХД')
 				.col-md-4
 					+item('400', 'Количество пользователей единой системы')
+				.col-md-4
+					+item('400', 'Количество пользователей единой системы')
+			hr
+			h2 - Пример отображения- по 2
 			+e.row-second.row
 				.col-md-6
 					+item('№1', 'Первое внедрение SAP в&nbsp;банковском секторе Узбекистана. Проект-победитель SAP Quality Awords 2017')
