--- a/sourse/pug/blocks/sWays/_sWays.scss
+++ b/sourse/pug/blocks/sWays/_sWays.scss
@@ -95,6 +95,7 @@
 				left: 0;
 				margin-top: rem(2);
 				color: var(--color, #{$secondary});
+				@include mt;
 				// top: 0;
 			}
 		}
@@ -156,6 +157,21 @@
 	cursor: pointer;
 	position: relative;
 	color: var(--color, #{$body-color});
+	&::after{
+		content: '';
+		position: absolute;
+		left: 0;
+		top: 100%;
+		width: 100%;
+		height: 1px;
+		@include mt;
+		z-index: 4;
+		background:   var(--color, #e3e7ec);
+		
+	}
+	&.active{
+		--color: #{$primary};
+	}
 	
 	.icon{
 		font-size: 16px; 
