--- a/sourse/pug/blocks/top-nav/_navMenu.scss
+++ b/sourse/pug/blocks/top-nav/_navMenu.scss
@@ -59,7 +59,8 @@
 						background-color: #000;
 					}
 					&::after{
-						transform: rotate(var(--rotate, 90deg));
+						transform: rotate(var(--rotateL, 90deg));
+						@include mt;
 					}
 				}
 				.sub-menu-wrap{
@@ -104,7 +105,10 @@
 		}
 	}
 	.menu-item-has-children.active{
-		--rotate: 0;
+		& > a{
+			
+			--rotateL: 0;
+		}
 		// z-index: 2;
 		&> a{
 			color: $primary;
