--- a/sourse/sass/_base.scss
+++ b/sourse/sass/_base.scss
@@ -52,25 +52,25 @@ body {
 		opacity: 1;
 	}
 
-	&::before {
-		content: '';
-		position: absolute;
-		left: 0;
-		top: 0;
-		width: 100%;
-		height: 100%;
-		@include mt;
-		// background-color: $body-color;
-		background-color: rgba($body-color, 0.8); 
-    backdrop-filter: blur(5px);
-		opacity: 0;
-		z-index: -1;
-		// left: 200px;
-		left: 0;
-		// opacity: 1;
-		// z-index: 1;
-		top: 0;
-	}
+	// &::before {
+	// 	content: '';
+	// 	position: absolute;
+	// 	left: 0;
+	// 	top: 0;
+	// 	width: 100%;
+	// 	height: 100%;
+	// 	@include mt;
+	// 	// background-color: $body-color;
+	// 	background-color: rgba($body-color, 0.8); 
+  //   backdrop-filter: blur(5px);
+	// 	opacity: 0;
+	// 	z-index: -1;
+	// 	// left: 200px;
+	// 	left: 0;
+	// 	// opacity: 1;
+	// 	// z-index: 1;
+	// 	top: 0;
+	// }
 
 	&.fancybox-active {
 		overflow: hidden;
@@ -85,10 +85,10 @@ body {
 		top: 0;
 		z-index: 999;
 
-		&::before {
-			z-index: 999;
-			opacity: 0.76;
-		}
+		// &::before {
+		// 	z-index: 999;
+		// 	opacity: 0.76;
+		// }
 	}
 }
 
@@ -673,4 +673,10 @@ iframe {
 	@include media-breakpoint-up(lg) {
 		margin-bottom: rem(72);
 	}
+}
+
+
+.swiper-horizontal>.swiper-scrollbar{
+	width: 100%;
+	left: 0;
 }
