--- a/sourse/sass/_sprite.scss
+++ b/sourse/sass/_sprite.scss
@@ -91,7 +91,7 @@
 	font-size:math.div(24,10)*1rem;
 	width: math.div(24,24)*1em;
 }
-.icon-whatsapp {
+.icon-whatsApp {
 	font-size:math.div(24,10)*1rem;
 	width: math.div(24,24)*1em;
 }
