--- a/sourse/sass/_vars.scss
+++ b/sourse/sass/_vars.scss
@@ -434,7 +434,7 @@ $body-text-align:           null !default;
 $link-color:                              $primary !default;
 $link-decoration:                         none !default;
 $link-shade-percentage:                   20% !default;
-$link-hover-color:                        shift-color($link-color, $link-shade-percentage) !default;
+$link-hover-color:                        $primary !default;
 $link-hover-decoration:                   null !default;
 
 $stretched-link-pseudo-element:           after !default;
