--- a/sourse/pug/blocks/sExpert/_sExpert.scss
+++ b/sourse/pug/blocks/sExpert/_sExpert.scss
@@ -190,7 +190,7 @@
 				width: calc(100% - rem(64));
 			} 
 			width: calc(100% + rem(164));
-			height: 1px;
+			height: .06rem;
 			background-image: url("../img/svg/border-bg.svg");
 			background-repeat: repeat-x;
 		}
