--- a/sourse/pug/pages/02-about.pug
+++ b/sourse/pug/pages/02-about.pug
@@ -44,7 +44,7 @@ block pagecontent
 	//- +sWays.bg-white.section--vh
 	//- +sTrust.bg-dark.section--vh
 	//- +sJoin.bg-white
-	+sForm().bg-dark 
+	+sForm().bg-dark.section--vh
 	+footer().bg-dark
       
 
