--- a/sourse/pug/blocks/headerBlock/_headerBlock.scss
+++ b/sourse/pug/blocks/headerBlock/_headerBlock.scss
@@ -77,42 +77,52 @@
 	&--artical {
 		padding-top: rem(48);
 		padding-bottom: rem(24);
-		height: auto;
-		min-height: auto;
+		height: auto !important;
+		
 		background-color: #fff;
-		justify-content: center;
-		height: 100%;
+		// justify-content: center;
+		display: block !important;
+		// height: 100%;
 		@include media-breakpoint-up(lg) {
-			padding: 0 rem(16);
+			padding: var(--sp-TOP,0) rem(16) 0;
 		}
 		@include media-breakpoint-up(md) {
-			padding-top: 48px;
-			height: 100vh;
+			// padding-top: var(--sp-TOP, #{rem(48px)});
+			--sp-TOP: #{rem(47px)};
+			// height: 100vh;
 		}
 		@include media-breakpoint-up(lg) {
-			padding-top: 47px;
 			padding-bottom: 0;
 		}
-		@include media-breakpoint-up(xl) {
-			padding-top: 57px;
+		@include media-breakpoint-up(xl) { 
+			--sp-TOP: #{rem(57px)};
 		}
+		
+		@include media-breakpoint-up(xxl) {
+			// padding-top: rem(77px);
+		}
+
 	}
 	&__row {
 		--bs-gutter-x: 0;
-		min-height: calc(100vh - 48px);
+		min-height: 100%;
+		// min-height: calc(100vh - 48px);
 		width: 100%;
 		@include media-breakpoint-up(xl) {
-			min-height: calc(100vh - 56px);
+			// min-height: calc(100vh - 56px);
 		}
 		@include media-breakpoint-down(md) {
-			min-height: auto;
+			// min-height: auto;
 		}
 	}
 	&__col {
-		padding: rem(24) rem(48) rem(35);
+		padding: rem(40) rem(48) rem(35);
 		display: flex;
 		flex-direction: column;
 		justify-content: space-between;
+		@include media-breakpoint-up(md) {
+			min-height: calc(100vh - var(--sp-TOP));
+		}
 		@include media-breakpoint-down(md) {
 			padding-right: rem(16);
 			padding-left: rem(16);
@@ -131,11 +141,12 @@
 			margin: rem(16);
 		}
 		@include media-breakpoint-up(sm) {
-			--ratio: 151/328;
+			--ratio: 0;
+			// padding: 0;
 		}
 		@include media-breakpoint-up(md) {
 			height: 100%;
-			--ratio: 624/623;
+			// --ratio: 624/623;
 		}
 	}
 	&__back {
@@ -166,6 +177,8 @@
 		}
 	}
 	&__content {
+		padding-top: 1rem;
+		padding-bottom: 1rem;
 		.h6 {
 			margin-bottom: rem(16);
 		}
@@ -233,7 +246,7 @@
 	&__tags {
 		display: flex;
 		flex-wrap: wrap;
-		gap: 16px 8px;
+		gap: rem(16px) rem(8px);
 		margin-left: rem(16);
 		@include media-breakpoint-up(md) {
 			justify-content: center;
@@ -242,9 +255,9 @@
 		a {
 			font-size: rem(10);
 			font-weight: 300;
-			padding: 1px 7.5px;
+			padding: rem(1px) rem(7.5px);
 			border: 0.5px solid $primary;
-			border-radius: 35px;
+			border-radius: rem(35px);
 			
 			// &:not(:last-child) {
 			// 	margin-right: 8px;
