--- a/sourse/pug/blocks/sNews/_sNews.scss
+++ b/sourse/pug/blocks/sNews/_sNews.scss
@@ -35,8 +35,8 @@
 				background-image: url('../img/svg/quote.svg');
 				background-repeat: no-repeat;
 				background-position: center;
-				width: 24px;
-				height: 24px;
+				width: rem(24px);
+				height: rem(24px);
 				display: block;
 				margin-bottom: rem(8);
 			}
@@ -55,9 +55,9 @@
 			// left: 0;
 			width: 100%;
 			height: 100%;
-			max-width: 48px;
-			max-height: 48px;
-			border-radius: 83px;
+			max-width: rem(48px);
+			max-height: rem(48px);
+			border-radius: rem(83px);
 			flex: 0 0 auto;
 			margin-right: rem(16);
 		}
@@ -153,7 +153,7 @@
 	&__date {
 		color: $secondary;
 		font-weight: 300;
-		font-size: 13px;
+		font-size: rem(13px);
 		line-height: calc(16 / 13);
 	}
 	&__text {
@@ -223,7 +223,7 @@
 		margin-bottom: rem(16);
 	}
 	&__caption {
-		letter-spacing: 1px;
+		letter-spacing: rem(1px);
 		text-transform: uppercase;
 		font-weight: 500;
 		font-size: rem(12);
