--- a/sourse/pug/blocks/sService/_sService.scss
+++ b/sourse/pug/blocks/sService/_sService.scss
@@ -105,7 +105,7 @@
 					color: $primary;
 				}
 				&--single {
-					padding-bottom: 38px;
+					padding-bottom: rem(38px);
 				}
 			}
 			&__caption {
@@ -126,14 +126,14 @@
 						top: 50%;
 						transform: translateY(-50%);
 						margin-top: 0;
-						right: -85px;
+						right: rem(-85px);
 					}
 					&--left {
 						position: absolute;
 						top: 50%;
 						transform: translateY(-50%);
 						margin-top: 0;
-						left: -85px;
+						left: rem(-85px);
 					}
 				}
 				&--single {
@@ -154,6 +154,21 @@
 		}
 		img {
 			display: block;
+		}
+	}
+	&__img-wrap{
+		// @include block(148, 48);
+		display: flex;
+		align-items: center;
+		width: rem(148);
+		max-height: rem(48);
+		img{
+
+			// position: absolute;
+			width: 100%;
+			max-height: 100%;
+			flex-shrink: 0;
+			// height: 100%;
 		}
 	}
 	@include media-breakpoint-up(xl) {
