--- a/sourse/pug/blocks/sServiceSupport/_sServiceSupport.scss
+++ b/sourse/pug/blocks/sServiceSupport/_sServiceSupport.scss
@@ -51,6 +51,9 @@
 		height: auto;
 	}
 	&__status-wrap {
+		.row{
+			align-items: center;
+		}
 		@include media-breakpoint-up(lg) {
 			margin-top: rem(64);
 		}
@@ -76,6 +79,7 @@
 		img {
 			max-width: 100%;
 			max-height: 100%;
+			width: 100%;
 		}
 	}
 	@include media-breakpoint-up(xl) {
