--- a/sourse/pug/blocks/sExperience/_sExperience.scss
+++ b/sourse/pug/blocks/sExperience/_sExperience.scss
@@ -413,6 +413,7 @@
 		width: 100%;
 		color: $white;
 		font-weight: 600;
+		--bs-btn-hover-color: #fff;
 	}
 	&__toggle-inner {
 		width: rem(100px);
